# Insightdata

./: Cargo.toml  readme.md
examples/: aaa.rs  solution.rs
src/: lib.rs  main.rs
src/catalog/: column.rs  mod.rs  table.rs
src/parser/: parser.rs
src/storage/: arrow_test.rs  dal.rs  mem.rs  mod.rs  parquet_read.rs
src/types/: mod.rs  types.rs  values.rs
