[package]
name = "Insightdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.40.0" }
anyhow = "1"
opendal = { version = "0.42.0", default-features = false, features = ["services-fs"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }