[package]
name = "Insightdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.40.0" }
anyhow = "1"
opendal = { version = "0.42.0", default-features = false, features = ["services-fs"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
arrow = "50.0.0"
parse-display = "0.9.0"
chrono = "0.4.34"
thiserror = "1.0.57"
datafusion = "39.0.0"